--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "omnipay/stripe": "~2.0",
+        "omnipay/paypal": "~2.0",
+        "symfony/event-dispatcher": "^2.8",
+        "basuregami/UserModule": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -46,5 +50,11 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true
-    }
+    },
+    "repositories": [
+            {
+                "type": "git",
+                "url":  "https://github.com/OliveMedia/OliveUserManagement.git"
+            }
+        ]
 }
