--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "basuregami/UserModule": "dev-master",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "omnipay/stripe": "~2.0",
+        "maatwebsite/excel": "^2.1",
         "omnipay/paypal": "~2.0",
-        "symfony/event-dispatcher": "^2.8",
-        "basuregami/UserModule": "dev-master"
+        "omnipay/stripe": "~2.0",
+        "symfony/event-dispatcher": "^2.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
